updating some minor changes

--- a/python/das-eda.ipynb
+++ b/python/das-eda.ipynb
@@ -22,7 +22,8 @@
     "from scipy import signal\n",
     "from scipy.signal import butter\n",
     "from scipy.signal import filtfilt\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import h5py"
    ]
   },
   {
