--- a/python/das-wrapping.ipynb
+++ b/python/das-wrapping.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "81b4f50b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import *"
+    "from utils.utils import *"
    ]
   },
   {
@@ -47,39 +47,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3000000,)\n",
-      "1686070619898600\n",
-      "<class 'numpy.int64'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = test['/Acquisition/Raw[0]/RawDataTime']\n",
-    "print(np.shape(a))\n",
-    "print(a[0])\n",
-    "print(type(a[0]))"
+    "# a = test['/Acquisition/Raw[0]/RawDataTime']\n",
+    "# print(np.shape(a))\n",
+    "# print(a[0])\n",
+    "# print(type(a[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "4d932bce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 06/02/23 data\n",
-    "filepath = '../data/wrapping_test.h5'\n",
-    "test = h5py.File(filepath, 'r')\n",
-    "data = test['/Acquisition/Raw[0]/RawData']\n",
-    "raw_data = np.double(data)\n",
-    "nt,nch = np.shape(raw_data)\n"
+    "# # 06/02/23 data\n",
+    "# filepath = '../data/wrapping_test.h5'\n",
+    "# test = h5py.File(filepath, 'r')\n",
+    "# data = test['/Acquisition/Raw[0]/RawData']\n",
+    "# raw_data = np.double(data)\n",
+    "# nt,nch = np.shape(raw_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a9271d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examining "
    ]
   },
   {
@@ -776,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
