adding updates to decimating functions

--- a/python/das-decimate.ipynb
+++ b/python/das-decimate.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "91be7d3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "81b4f50b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "7518a8da",
    "metadata": {},
    "outputs": [],
@@ -56,39 +47,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a634832c",
+   "execution_count": 75,
+   "id": "a63d0515",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decimating sensor_2023-07-15T105951-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-15T105951-0500.h5 decimated\n",
+      "Decimating sensor_2023-07-15T110951-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-15T110951-0500.h5 decimated\n"
+     ]
+    }
+   ],
    "source": [
-    "directory_to_file1 = r'D:\\das-data-oklahoma\\recording_2023-06-06T09_44_56-0500'\n",
-    "name_of_file1 = 'sensor_2023-06-06T094457-0500'\n",
-    "decim_to_100(directory_to_file=directory_to_file1,name_of_file=name_of_file1,gauge_length=8,decim_factor=50)"
+    "dir_1 = r'D:\\das-data-oklahoma\\recording_2023-07-15T10_59_52-0500'\n",
+    "batch_decim_to_100(dir_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ff9cd7c6",
+   "execution_count": 76,
+   "id": "64ca0ca6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sensor_2023-07-15T105951-0500_decimated100hz.h5\n",
+      "sensor_2023-07-15T110951-0500_decimated100hz.h5\n"
+     ]
+    }
+   ],
    "source": [
-    "directory_to_file2 = r'D:\\das-data-oklahoma\\recording_2023-06-06T09_44_56-0500'\n",
-    "name_of_file2 = 'sensor_2023-06-06T095457-0500'\n",
-    "decim_to_100(directory_to_file=directory_to_file2,name_of_file=name_of_file2,gauge_length=8,decim_factor=50)"
+    "concatenate_and_save_h5(directory_to_file=dir_1,output_filename='_decimated100hz_compiled')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "168dc327",
+   "execution_count": null,
+   "id": "d6c6d2e9",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4ce88d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decimating sensor_2023-07-16T120857-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-16T120857-0500.h5 decimated\n",
+      "Decimating sensor_2023-07-16T121857-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-16T121857-0500.h5 decimated\n"
+     ]
+    }
+   ],
    "source": [
-    "directory_to_file3 = r'D:\\das-data-oklahoma\\recording_2023-06-06T09_44_56-0500'\n",
-    "name_of_file3 = 'sensor_2023-06-06T100457-0500'\n",
-    "decim_to_100(directory_to_file=directory_to_file3,name_of_file=name_of_file3,gauge_length=8,decim_factor=50)"
+    "dir_2 = r'D:\\das-data-oklahoma\\recording_2023-07-16T12_08_58-0500'\n",
+    "batch_decim_to_100(dir_2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "4261ce1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sensor_2023-07-16T120857-0500_decimated100hz.h5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sensor_2023-07-16T121857-0500_decimated100hz.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "concatenate_and_save_h5(directory_to_file=dir_2,output_filename='_decimated100hz_compiled')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b0a607",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "54c20b99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decimating sensor_2023-07-17T105954-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-17T105954-0500.h5 decimated\n",
+      "Decimating sensor_2023-07-17T110954-0500.h5\n",
+      "8\n",
+      "sensor_2023-07-17T110954-0500.h5 decimated\n"
+     ]
+    }
+   ],
+   "source": [
+    "dir_3 = r'D:\\das-data-oklahoma\\recording_2023-07-17T10_59_55-0500'\n",
+    "batch_decim_to_100(dir_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "1ccb3781",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sensor_2023-07-17T105954-0500_decimated100hz.h5\n",
+      "sensor_2023-07-17T110954-0500_decimated100hz.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "concatenate_and_save_h5(directory_to_file=dir_3,output_filename='_decimated100hz_compiled')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bb49cad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af3a6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -114,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,28 +246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "d380604c",
+   "execution_count": 60,
+   "id": "59d8d60d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain_compiled,time_compiled = load_decim_data(directory_to_file=directory_to_file1,\n",
+    "                                                name_of_file='sensor_2023-06-06T094457-0500_decimated100hz_compiled')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5dd7c23e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sensor_2023-06-06T094457-0500_decimated100hz.h5\n",
-      "(102, 60000)\n",
-      "sensor_2023-06-06T095457-0500_decimated100hz.h5\n",
-      "(102, 60000)\n",
-      "sensor_2023-06-06T100457-0500_decimated100hz.h5\n",
-      "(102, 42572)\n",
-      "(102, 162572)\n",
-      "(162572,)\n"
+      "(102, 162572)\n"
      ]
     }
    ],
-   "source": [
-    "concatenate_and_save_h5(directory_to_file=directory_to_file1,output_filename='_decimated100hz_compiled')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
