adding code changes for analyzing braking data

--- a/python/das-decimate.ipynb
+++ b/python/das-decimate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "91be7d3e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "81b4f50b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "7518a8da",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "a63d0515",
    "metadata": {},
    "outputs": [
@@ -55,23 +55,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decimating sensor_2023-07-15T105951-0500.h5\n",
-      "8\n",
-      "sensor_2023-07-15T105951-0500.h5 decimated\n",
-      "Decimating sensor_2023-07-15T110951-0500.h5\n",
-      "8\n",
-      "sensor_2023-07-15T110951-0500.h5 decimated\n"
+      "Decimating sensor_2023-06-06T111659-0500.h5\n",
+      "sensor_2023-06-06T111659-0500.h5 decimated\n",
+      "Decimating sensor_2023-06-06T112659-0500.h5\n",
+      "sensor_2023-06-06T112659-0500.h5 decimated\n",
+      "Decimating sensor_2023-06-06T113659-0500.h5\n",
+      "sensor_2023-06-06T113659-0500.h5 decimated\n",
+      "Decimating sensor_2023-06-06T114659-0500.h5\n",
+      "sensor_2023-06-06T114659-0500.h5 decimated\n",
+      "Decimating sensor_2023-06-06T115659-0500.h5\n",
+      "sensor_2023-06-06T115659-0500.h5 decimated\n",
+      "Decimating sensor_2023-06-06T120659-0500.h5\n",
+      "sensor_2023-06-06T120659-0500.h5 decimated\n"
      ]
     }
    ],
    "source": [
-    "dir_1 = r'D:\\das-data-oklahoma\\recording_2023-07-15T10_59_52-0500'\n",
+    "dir_1 = r'D:\\das-data-oklahoma\\prelim-test\\recording_2023-06-06T11_16_40-0500'\n",
     "batch_decim_to_100(dir_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "64ca0ca6",
    "metadata": {},
    "outputs": [
@@ -79,22 +85,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sensor_2023-07-15T105951-0500_decimated100hz.h5\n",
-      "sensor_2023-07-15T110951-0500_decimated100hz.h5\n"
+      "sensor_2023-06-06T111659-0500_decimated100hz.h5\n",
+      "sensor_2023-06-06T112659-0500_decimated100hz.h5\n",
+      "sensor_2023-06-06T113659-0500_decimated100hz.h5\n",
+      "sensor_2023-06-06T114659-0500_decimated100hz.h5\n",
+      "sensor_2023-06-06T115659-0500_decimated100hz.h5\n",
+      "sensor_2023-06-06T120659-0500_decimated100hz.h5\n"
      ]
     }
    ],
    "source": [
     "concatenate_and_save_h5(directory_to_file=dir_1,output_filename='_decimated100hz_compiled')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6c6d2e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
