--- a/python/das-wrapping.ipynb
+++ b/python/das-wrapping.ipynb
@@ -51,10 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a = test['/Acquisition/Raw[0]/RawDataTime']\n",
-    "# print(np.shape(a))\n",
-    "# print(a[0])\n",
-    "# print(type(a[0]))"
+    "# Put link to data Berkeley Box and file name\n",
+    "dir_brake = r'D:\\das-data-oklahoma\\prelim-test\\recording_2023-06-06T11_16_40-0500'"
    ]
   },
   {
@@ -64,12 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 06/02/23 data\n",
-    "# filepath = '../data/wrapping_test.h5'\n",
-    "# test = h5py.File(filepath, 'r')\n",
-    "# data = test['/Acquisition/Raw[0]/RawData']\n",
-    "# raw_data = np.double(data)\n",
-    "# nt,nch = np.shape(raw_data)\n"
+    "strain_brake, time_brake = load_decim_data(dir_brake + '/' + 'sensor_2023-06-06T111659-0500_decimated100hz_compiled.h5')\n"
    ]
   },
   {
